# RabbitMQ_CPP_client

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TC_BR21.cmake  mem_check.sh
src/: CMakeLists.txt  a.out  conn_restore.cpp  consume.cpp  emit_log.cpp  emit_log_direct.cpp  emit_log_topic.cpp  example.cpp  my_handler.cpp  my_handler.hpp  new_task.cpp  p_confirms.cpp  produce.cpp  publish.cpp  receive.cpp  receive_logs.cpp  receive_logs_direct.cpp  receive_logs_topic.cpp  reconnection.cpp  rpc_client.cpp  rpc_server.cpp  secure_conn.cpp  send.cpp  utils.hpp  worker.cpp
